cmake_minimum_required(VERSION 3.17)
project(main)

set(CMAKE_CXX_STANDARD 14)

add_executable(001 001.variadic.templates.cpp)
add_executable(002 002.smake.knowlege.cpp)
add_executable(003 003.auto.cpp)
add_executable(004 004.uniform.initialization.cpp)
add_executable(005 005.initialization.list.cpp)
add_executable(006 006.explicit.cpp)